TEIID-886 adding support for any/some/every/stddev_pop/stddev_samp/var_pop/var_samp - agg pushdown is supported, but no compensation was added if the source doesn't support, but does support standard aggs.  also reducing lookaheads in the parser and removing criteriaevaluationexception (I was going to allow boolean value expression to include criteria, but named proc properties then become ambiguous).